--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.application.name=employee-management-system
+server.port=8080
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# ? PostgreSQL database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogdb
+spring.datasource.username=postgres
+spring.datasource.password=database
 
-spring.jpa.hibernate.ddl-auto = update
+# ? Hibernate properties for PostgreSQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
